--- a/front-argo.yaml
+++ b/front-argo.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: Front-end
+  name: front-end
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Luis-Diaz-Cryo/data-registration-front-ldiaz.git
-    path: "Patrones-parcial"
+    path: "."
     targetRevision: HEAD
   syncPolicy:
     automated:
