--- a/front-argo.yaml
+++ b/front-argo.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: front-end
-  namespace: argocd  # The namespace where Argo CD is installed
+  namespace: argocd  
 spec:
   project: default
   source:
