--- a/front-service.yaml
+++ b/front-service.yaml
@@ -4,10 +4,9 @@ metadata:
   name: react-service
   namespace: back-end
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: react-app
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30002
