--- a/manifests/front-service.yaml
+++ b/manifests/front-service.yaml
@@ -4,9 +4,10 @@ metadata:
   name: react-service
   namespace: back-end
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: react-app
   ports:
     - port: 80
       targetPort: 80
+      nodePort: 30000  
