--- a/manifests/front-argo.yaml
+++ b/manifests/front-argo.yaml
@@ -17,4 +17,4 @@ spec:
       - CreateNamespace=true  
   destination:
     server: https://kubernetes.default.svc  
-    namespace: front-end  
+    namespace: back-end 
