--- a/manifests/front-service.yaml
+++ b/manifests/front-service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: react-service
   namespace: back-end
 spec:
-  type: NodePort
   selector:
     app: react-app
+  type: NodePort
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
-      nodePort: 30000  
+      nodePort: 30170
