--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -46,7 +46,7 @@ jobs:
           IMAGE_NAME: cyldecryo/parcial1-front-end
           NEW_TAG: ${{ github.sha }}
         run: |
-          yq eval ".spec.template.spec.containers[0].image = \"${{ env.IMAGE_NAME }}:${{ env.NEW_TAG }}\"" -i manifests\front-deployment.yaml
+          yq eval ".spec.template.spec.containers[0].image = \"${{ env.IMAGE_NAME }}:${{ env.NEW_TAG }}\"" -i manifests/front-deployment.yaml
 
       - name: Commit y push cambios
         env:
