--- a/manifests/front-deployment.yaml
+++ b/manifests/front-deployment.yaml
@@ -17,3 +17,19 @@ spec:
           image: cyldecryo/parcial1-front-end:6472e90359bbccc25d7efcd0a999039d1cc8886e
           ports:
             - containerPort: 80
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: react-service
+  namespace: back-end
+spec:
+  selector:
+    app: react-app
+  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30170
