--- a/manifests/front-deployment.yaml
+++ b/manifests/front-deployment.yaml
@@ -2,21 +2,23 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: front-end
+  namespace: back-end
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: front-end
+      app: react-app  
   template:
     metadata:
       labels:
-        app: front-end
+        app: react-app  
     spec:
       containers:
         - name: react-container
           image: cyldecryo/parcial1-front-end:6472e90359bbccc25d7efcd0a999039d1cc8886e
           ports:
             - containerPort: 80
+
 ---
 
 apiVersion: v1
@@ -26,7 +28,7 @@ metadata:
   namespace: back-end
 spec:
   selector:
-    app: react-app
+    app: react-app  
   type: NodePort
   ports:
     - protocol: TCP
