--- a/manifests/front-deployment.yaml
+++ b/manifests/front-deployment.yaml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: react-app
+      app: front-end
   template:
     metadata:
       labels:
-        app: react-app
+        app: front-end
     spec:
       containers:
         - name: react-container
