--- a/manifests/front-service.yaml
+++ b/manifests/front-service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: back-end
 spec:
   selector:
-    app: react-app
+    app: front-end
   type: NodePort
   ports:
     - protocol: TCP
